# char-device-node-utils

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: buildAndTest.yml
src/: CMakeLists.txt
src/char-node-creator/: CMakeLists.txt  Kbuild.in  Makefile  char-node-creator.c  char_node_creator.c  control-node.c  control-node.h  globals.h  kmakefile.in  kmodulelocation.h.in
src/client-lib/: CMakeLists.txt  kmodulehelpers.cpp  kmodulehelpers.h
src/fuse-examples/: CMakeLists.txt
tests/gtest/: CMakeLists.txt  fixtures.h  kernelmodulehelpers.cpp  kernelmodulehelpers.h  kmodulelocation.h.in  testcontroldevnode.cpp  testkmodhelpers.cpp
